css/peopleofspice.css
/* ... */
.nav-container {
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1600px;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.menu-button {
  background-color: #0000;
  align-items: center;
  display: flex;
}

.menu-button.w--open {
  background-color: #0000;
}

.burgher-line {
  background-color: var(--white);
  border: 1px #000;
  width: 35px;
  height: 1px;
}

.burgher-line.center {
  margin-top: 5px;
  margin-bottom: 5px;
}

.brand {
  width: auto;
}

.size-hero {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  margin-right: 0;
  padding-left: 0;
  padding-right: 0;
  display: flex;
  position: relative;
  overflow: hidden;
}

.hero-wrao-text {
  z-index: 7;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  width: 100%;
  max-width: 1480px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 0;
  padding-left: 60px;
  padding-right: 60px;
  display: flex;
  position: absolute;
  bottom: 218px;
}

.line {
  background-color: var(--tan);
  color: #fff;
  flex: 0 auto;
  width: 100%;
  height: 1px;
  margin-bottom: 32px;
  position: static;
  top: 0;
  left: auto;
  right: auto;
}

.line.service {
  z-index: 1;
  margin-top: 10px;
  position: relative;
}

.line.view {
  display: none;
}

.paragraph-hero {
  color: var(--white);
  text-transform: none;
  max-width: 456px;
  margin-left: auto;
  font-family: Raleway, sans-serif;
  font-size: 36px;
  font-weight: 400;
  line-height: 1.2;
}

.text-span-3 {
  font-weight: 700;
}

.wrap-text {
  z-index: 5;
  flex-direction: row-reverse;
  justify-content: flex-end;
  align-items: center;
  width: 50vw;
  margin-left: 118px;
  display: flex;
  position: absolute;
  inset: auto auto auto 0%;
  transform: translate(0, -50%);
}

.main-paragraph {
  color: var(--white);
  text-align: left;
  width: auto;
  margin-bottom: 0;
  font-family: Raleway, sans-serif;
  font-size: 33px;
  font-weight: 300;
  line-height: 1.1;
}

.main-paragraph.modale {
  width: 400px;
  margin-left: 23px;
}

.main-paragraph.modale.first {
  opacity: 1;
}

.main-paragraph.modale-second {
  width: 400px;
  margin-left: 9px;
}

.main-paragraph.modale-third {
  width: 400px;
  margin-left: 23px;
}

.main-paragraph.modale-fourth, .main-paragraph.modale-fifth {
  width: 600px;
  margin-left: 23px;
}

.main-paragraph.review {
  font-size: 24px;
  line-height: 28px;
}

.main-paragraph.review.second {
  margin-bottom: -20px;
  margin-right: auto;
  font-family: Playfair Display, sans-serif;
  font-size: 64px;
  line-height: 1;
}

.main-paragraph.second {
  font-family: Playfair Display, sans-serif;
  font-style: italic;
  font-weight: 400;
}

.overflow {
  background-color: #0000;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  height: auto;
  display: block;
  overflow: hidden;
}

.overflow.margin {
  margin-bottom: 15px;
}

.overflow.flex {
  z-index: 1;
  justify-content: space-between;
  align-items: center;
  display: flex;
  position: relative;
}

.overflow.absolute {
  z-index: -1;
  opacity: 1;
  position: absolute;
  top: 10%;
  left: 3%;
  overflow: hidden;
}

.services-section {
  text-align: center;
  height: auto;
  padding: 140px 60px;
  position: relative;
}

.container {
  z-index: 5;
  border: 2px solid var(--tan);
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  background-color: #0000;
  border-radius: 32px;
  width: auto;
  margin-left: auto;
  margin-right: auto;
  padding: 40px;
  position: relative;
  box-shadow: 0 2px 32px #0003;
}

.container.second {
  max-width: 1200px;
}

.container.second.stiky {
  height: 100%;
}

.services-wrap {
  cursor: pointer;
  flex-direction: column;
  justify-content: center;
  text-decoration: none;
  display: flex;
  position: relative;
}

.services-wrap.hide {
  display: none;
}

.heading {
  opacity: 1;
  color: var(--white);
  border-radius: 0;
  justify-content: center;
  align-items: flex-start;
  margin-top: 0;
  margin-bottom: 0;
  padding-bottom: 5px;
  font-family: Playfair Display, sans-serif;
  font-size: 114px;
  font-style: italic;
  font-weight: 800;
  line-height: 1;
  display: block;
}

.modal-wrap {
  z-index: 9999;
  background-color: #0000;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  display: flex;
  position: fixed;
  inset: 0%;
}

.modal-wrap.first {
  display: none;
}

.modal-wrap.first.hide {
  display: block;
}

.modal-wrap.second, .modal-wrap.third, .modal-wrap.fourth, .modal-wrap.fifth {
  display: none;
}

.background-move-image {
  background-image: url('https://d3e54v103j8qbb.cloudfront.net/img/background-image.svg');
  background-position: 50%;
  background-size: cover;
  width: 20vw;
  height: 25vh;
  display: none;
  position: absolute;
  inset: auto -6% auto auto;
}

.background-move-image.first {
  background-image: none;
  bottom: auto;
  right: -6%;
}

.background-move-image.second {
  background-image: url('../images/AdobeStock_601004060.webp');
  bottom: auto;
  right: -6%;
}

.background-move-image.third {
  background-image: url('../images/ramen-bowl---people-of-spice.jpg');
  right: -6%;
}

.background-move-image.fourth {
  background-image: url('../images/AdobeStock_618895056.webp');
}

.background-move-image.fifth {
  background-image: url('../images/5-2.jpg');
}

.wrap-text-modal {
  z-index: 6;
  background-color: #0000;
  width: 100%;
  height: auto;
  margin-top: auto;
  margin-bottom: 0;
  padding-left: 20px;
  padding-right: 20px;
  position: relative;
  bottom: 0;
}

.background-modal.first {
  opacity: 1;
  background-image: linear-gradient(#0003, #000), url('../images/AdobeStock_615585664.jpeg');
  background-position: 0 0, 50%;
  background-size: auto, cover;
  width: 100vw;
  height: 100vh;
  position: absolute;
  inset: auto;
}

.background-modal.first.hide {
  display: none;
}
/* ... */

